fix: update gap for questions

--- a/src/index.css
+++ b/src/index.css
@@ -281,6 +281,7 @@ progress {
 
 .row {
   display: flex;
+  gap: 5px;
   flex-wrap: wrap;
 }
 
